objects/PJ_ByFor_Experience__c.object
<CustomObject>
    <description>Experience object : describe the experience process related to a client command from &quot;Open&quot; to &quot;Won&quot; through &quot;Payement&quot; and &quot;Shipping&quot;.</description>
    <fields>
        <fullName>PJ_ByFor_Accompanying_People_Name_if_any__c</fullName>
        <label>Accompanying People Name (if any)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Arrival_time__c</fullName>
        <label>Arrival Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_BillingCity__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_BillingZipPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Bottles_Invoice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottles Invoice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>PJ_ByFor_Client__c</referenceTo>
        <relationshipLabel>Experiences</relationshipLabel>
        <relationshipName>Experiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Client_reception_date__c</fullName>
        <inlineHelpText>Correspond to the date when the clients should receive the  products.</inlineHelpText>
        <label>Client Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Copy_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copy Billing Adress and past on Shipping Adress</description>
        <label>Copy Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Cost_of_additional_bottles__c</fullName>
        <formula>CASE( PJ_ByFor_Selected_cuvee__c ,
               &quot;Belle Epoque Blanc&quot;, 350* PJ_ByFor_additional_bottles_required__c ,
               &quot;Belle Epoque Rosé&quot;, 450* PJ_ByFor_additional_bottles_required__c,
               &quot;Belle Epoque Blanc de blancs&quot;,550* PJ_ByFor_additional_bottles_required__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Additional Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Countries__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Departure_time__c</fullName>
        <label>Departure Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Dispatch_date__c</fullName>
        <inlineHelpText>Correspond to the date when the products entered the Sub.</inlineHelpText>
        <label>Market Company Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Downpayment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Down Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Effective_Client_Reception_Note__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Effectiveclientreception__c</fullName>
        <label>Effective Client Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Estimate_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Send the Estimate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Estimate_sent_date__c</fullName>
        <label>Estimate Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_EstimatedClientValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Estimate Client Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Estimated_timing_delivery__c</fullName>
        <inlineHelpText>The time for delivery is more or less 2 months. 
By default : + 8 weeks
If Epernay : + 10 weeks</inlineHelpText>
        <label>Estimated Timing of the Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_Client_Full_Name__c</fullName>
        <formula>TEXT(PJ_ByFor_Client__r.PJ_ByFor_Salutation__c) &amp;  &quot; &quot; &amp; PJ_ByFor_Client__r.PJ_ByFor_First_name__c &amp;  &quot; &quot; &amp; PJ_ByFor_Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experience Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_PerformedDate__c</fullName>
        <label>Experience Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Experience_performed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Experience Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Foil_Color__c</fullName>
        <label>Foil Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_FoodAllergies__c</fullName>
        <description>Food Allergies / Food Preferences</description>
        <label>Food Allergies / Food Preferences</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_If_Interpreter_needed_From__c</fullName>
        <label>If Interpreter Needed from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Since the Arrival</fullName>
                </value>
                <value>
                    <fullName>Only for the Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_InvoiceSendDate__c</fullName>
        <label>Invoice Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Neck_Collar_Personalisation__c</fullName>
        <label>Neck Collar Personalisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Numberofbottlesrequired__c</fullName>
        <formula>CASE( PJ_ByFor_Selected_cuvee__c ,
&quot;Belle Epoque Blanc de blancs&quot;, 36,
&quot;Belle Epoque Rosé&quot;, 48,
&quot;Belle Epoque Blanc&quot;, 60,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Bottles Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Payment_confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Payment Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Place_of_arrival__c</fullName>
        <label>Place of Arrival</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Place_of_departure__c</fullName>
        <label>Place of Departure</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PlaceoftheExperience__c</fullName>
        <label>Place of the Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Epernay</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Preference__c</fullName>
        <label>Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blanc de Blancs</fullName>
                </value>
                <value>
                    <fullName>Rosé</fullName>
                </value>
                <value>
                    <fullName>Blanc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PresentationBrochuresent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Presentation Brochure Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PurchaseOrderApprovedDate__c</fullName>
        <label>Purchase Order Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PurchaseOrderSampleAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Purchase Order and Sample Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PurchaseOrderSamplessent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Purchase Order and Samples Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_PurchaseOrderSentDate__c</fullName>
        <label>Purchase Order Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Re_Invoicing_Subsidiary_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Invoicing Subsidiary Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Ready_to_ship_bottles__c</fullName>
        <label>Ready To Ship Bottles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>w01</fullName>
                </value>
                <value>
                    <fullName>w02</fullName>
                </value>
                <value>
                    <fullName>w03</fullName>
                </value>
                <value>
                    <fullName>w04</fullName>
                </value>
                <value>
                    <fullName>w05</fullName>
                </value>
                <value>
                    <fullName>w06</fullName>
                </value>
                <value>
                    <fullName>w07</fullName>
                </value>
                <value>
                    <fullName>w08</fullName>
                </value>
                <value>
                    <fullName>w09</fullName>
                </value>
                <value>
                    <fullName>w10</fullName>
                </value>
                <value>
                    <fullName>w11</fullName>
                </value>
                <value>
                    <fullName>w12</fullName>
                </value>
                <value>
                    <fullName>w13</fullName>
                </value>
                <value>
                    <fullName>w14</fullName>
                </value>
                <value>
                    <fullName>w15</fullName>
                </value>
                <value>
                    <fullName>w16</fullName>
                </value>
                <value>
                    <fullName>w17</fullName>
                </value>
                <value>
                    <fullName>w18</fullName>
                </value>
                <value>
                    <fullName>w19</fullName>
                </value>
                <value>
                    <fullName>w20</fullName>
                </value>
                <value>
                    <fullName>w21</fullName>
                </value>
                <value>
                    <fullName>w22</fullName>
                </value>
                <value>
                    <fullName>w23</fullName>
                </value>
                <value>
                    <fullName>w24</fullName>
                </value>
                <value>
                    <fullName>w25</fullName>
                </value>
                <value>
                    <fullName>w26</fullName>
                </value>
                <value>
                    <fullName>w27</fullName>
                </value>
                <value>
                    <fullName>w28</fullName>
                </value>
                <value>
                    <fullName>w29</fullName>
                </value>
                <value>
                    <fullName>w30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Sales_Representative__c</fullName>
        <label>Sales Representative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Selected_Personalisations__c</fullName>
        <label>Foil Personalisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rosé Marquage Doré</fullName>
                </value>
                <value>
                    <fullName>Blanc Marquage Doré</fullName>
                </value>
                <value>
                    <fullName>Doré Marquage Blanc</fullName>
                </value>
                <value>
                    <fullName>Doré Marquage Vert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Selected_cuvee__c</fullName>
        <label>Selected Cuvée</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belle Epoque Blanc</fullName>
                </value>
                <value>
                    <fullName>Belle Epoque Rosé</fullName>
                </value>
                <value>
                    <fullName>Belle Epoque Blanc de blancs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Selected_liqueur__c</fullName>
        <label>Selected Liqueur</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_ShippingCountry_Shipping__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_ShippingZipPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Shipping_Case_Text__c</fullName>
        <label>Shipping Case Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Shipping_Case__c</fullName>
        <label>Shipping Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Shipping_date__c</fullName>
        <inlineHelpText>Corresponds to the date when the products left Epernay.</inlineHelpText>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Status__c</fullName>
        <description>Define the experience process.</description>
        <label>Experience Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Date - Confirmation Pending</fullName>
                </value>
                <value>
                    <fullName>Send the Estimate</fullName>
                </value>
                <value>
                    <fullName>Estimated Validation</fullName>
                </value>
                <value>
                    <fullName>Press Release Sent</fullName>
                </value>
                <value>
                    <fullName>Travel Itinerary</fullName>
                </value>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Send Invoice</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Finalised</fullName>
                </value>
                <value>
                    <fullName>Completed Experience</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Step_Number__c</fullName>
        <formula>CASE(
	TEXT(PJ_ByFor_Status__c),
	&quot;Open&quot;,
	11,
	&quot;Date - Confirmation Pending&quot;,
	12,
	&quot;Send the Estimate&quot;,
	13,
	&quot;Estimated Validation&quot;,
	14,
	&quot;Travel Itinerary&quot;,
	16,
	&quot;Experience&quot;,
	21,
	&quot;Purchase Order&quot;,
	31,
	&quot;Send Invoice&quot;,
	32,
	&quot;Payment&quot;,
	33,
	&quot;Shipping&quot;,
	34,
	&quot;Finalised&quot;,
	35,
	&quot;Completed Experience&quot;,
	36,
	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Subsidiary__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Tech_Owner_Company__c</fullName>
        <label>Tech Owner Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Total_Cost__c</fullName>
        <formula>CASE( PJ_ByFor_Selected_cuvee__c ,
               &quot;Belle Epoque Blanc&quot;, 50000 + 350* PJ_ByFor_additional_bottles_required__c ,
               &quot;Belle Epoque Rosé&quot;, 50000 + 450* PJ_ByFor_additional_bottles_required__c,
               &quot;Belle Epoque Blanc de blancs&quot;, 50000 + 550* PJ_ByFor_additional_bottles_required__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Transport_Departure__c</fullName>
        <label>Arrangement Taxi Departure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Transportarrangement__c</fullName>
        <label>Arrangement Taxi Arrival</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_TravelInfosCheckedDate__c</fullName>
        <label>Travel Info Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Travel_Information_request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Need to be checked to move to the next stage.</inlineHelpText>
        <label>Travel Information Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Travel_information_request_date__c</fullName>
        <label>Travel Information Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Wishedexperiencedate__c</fullName>
        <label>Wished Experience Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Wooden_Case_Personalisation__c</fullName>
        <label>Wooden Case Personalisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_additional_bottles_required__c</fullName>
        <label>Number of  Additional Bottles Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_number_of_persons__c</fullName>
        <description>The number of accompanying persons.</description>
        <label>How Many People in Total?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Experience</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PJ_ByFor_Status__c</columns>
        <columns>PJ_ByFor_PlaceoftheExperience__c</columns>
        <columns>PJ_ByFor_ShippingCity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Date_Confirmation</fullName>
        <active>true</active>
        <label>Status: Date Confirmation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Estimate_Approved</fullName>
        <active>true</active>
        <label>Status: Estimate Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Estimate_Sent</fullName>
        <active>true</active>
        <label>Status: Estimate Sent</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Experience</fullName>
        <active>true</active>
        <label>Status: Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Finalised</fullName>
        <active>true</active>
        <label>Status: Finalised</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Invoice</fullName>
        <active>true</active>
        <label>Status: Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Open</fullName>
        <active>true</active>
        <label>Status: Open</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Payment</fullName>
        <active>true</active>
        <label>Status: Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Purchase_Order</fullName>
        <active>true</active>
        <label>Status: Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Shipping</fullName>
        <active>true</active>
        <label>Status: Shipping</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Status_Travel_Itinerary_Request</fullName>
        <active>true</active>
        <label>Status: Travel Itinerary Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>